--- a/style.css
+++ b/style.css
@@ -16,24 +16,16 @@
     text-align: center;
   }
   
-  header{
+  #header{
     background: #ebebeb;
     padding: 20px 0;
     margin-bottom: 10px;
   }
 
-  nav{
+  #nav{
     background: #ebebeb;
     padding: 20px 0;
     margin-bottom: 20px;
-  }
-
-  #aside {
-    margin-bottom: 10px; 
-    float: right;
-    width: 450px;
-    background: #ebebeb; 
-    height: 305px;
   }
 
   #section {
@@ -43,29 +35,32 @@
     margin-bottom: 10px;
   }
 
-/**#article{
-    color: #ebebeb;
-    padding: 10px;
-    background: #777;
-}**/
-   
-  #middle {    
+  #article {    
     padding: 20px;    
     background: #777;
     color: #ebebeb;
     margin: 20px;
 }
 
-  h1,p {  
-    color: #777;
+h5, p {
+  color: #777;
     background: #ebebeb;
     padding: 20px;
     margin-bottom: 1px; 
     margin-top: 10px;
     height: 50px;
   }
+
+ #aside {
+    margin-bottom: 10px; 
+    float: right;
+    width: 450px;
+    background: #ebebeb; 
+    height: 305px;
+    padding: 20px;
+  }
   
-  footer {
+  #footer {
     background: #ebebeb;
     padding: 20px 0;
     clear: both;
