--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
  * {
     box-sizing: border-box;
     text-align: center;
+    margin: 0px;
   }
   
   body {
@@ -20,6 +21,7 @@
     background: #ebebeb;
     padding: 20px 0;
     margin-bottom: 10px;
+    margin-top: 10px;
   }
 
   #nav{
@@ -33,6 +35,7 @@
     background: #ebebeb; 
     width: 495px;
     margin-bottom: 10px;
+    padding-top: 30px;
   }
 
   #article {    
@@ -42,7 +45,7 @@
     margin: 20px;
 }
 
-h5, p {
+h1, p {
   color: #777;
     background: #ebebeb;
     padding: 20px;
@@ -56,8 +59,8 @@ h5, p {
     float: right;
     width: 450px;
     background: #ebebeb; 
-    height: 305px;
-    padding: 20px;
+    height: 265px;
+    padding: 30px;
   }
   
   #footer {
